Fix deleteListing.